--- a/src/sass/block/_menu.scss
+++ b/src/sass/block/_menu.scss
@@ -1,13 +1,12 @@
-.menu {
-  &__wrapper {
+.titul {
+  &__menu {
     margin-top: 30px;
     padding-bottom: 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #E4E8EA;
-
-    &_number{
+    &_number {
       text-decoration: none;
       font-weight: 700;
       font-size: 20px;
@@ -16,7 +15,6 @@
       color: #41B619;
     }
     &_links {
-      
       &-order {
         margin: 0;
         padding: 0;
@@ -25,8 +23,7 @@
         justify-content: center;
         align-items: center;
         column-gap: 24px;
-        
-        a{
+        a {
           text-decoration: none;
           font-weight: 400;
           font-size: 16px;
@@ -35,5 +32,4 @@
       }
     }
   }
-
 }
