--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -1,6 +1,47 @@
 .benefit {
   padding-bottom: 200px;
-
+  .mininformation {
+    margin-top: 14px;
+    display: flex;
+    column-gap: 36px;
+    &__el{
+      column-gap: 10px;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 28px;
+      color: #464646;
+     
+      span{
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 28px;
+        letter-spacing: 0.02em;
+        color: #464646;
+      }
+      &_img{
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 46px;
+        height: 46px;
+        border: 1px solid #F1F2F2;
+        border-radius: 8px;
+        &:after{
+          content: '';
+          position: absolute;
+          top: 0;
+          width: 23px;
+          height: 23px;
+          background: url('../img/pointer.svg');
+          top: 33px;
+          right: -3px;
+        }
+      }
+    
+    }
+  }
   &__title {
     position: relative;
     font-weight: 700;
@@ -25,6 +66,7 @@
   }
 
   &__nav {
+    margin-top: 18px;
     .nav {
       display: flex;
       column-gap: 42px;
