--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -42,6 +42,66 @@
     
     }
   }
+  .wrapper{
+    padding: 24px;
+    max-width: 628px;
+    background: #F1F2F2;
+    border-radius: 32px;
+    &__card{
+      &_btn{
+        margin-top: 24px;
+        width: 350px;
+        height: 56px;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 20px;
+        text-align: center;
+        color: #41B619;
+        border: 1px solid #41B619;
+        border-radius: 20px;
+      }
+      &_title{
+        margin-top: 24px;
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 54px;
+        letter-spacing: 0.02em;
+        color: #464646;
+      }
+      &_grid{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(165px, 180px));
+        grid-template-rows: repeat(3, 96px);
+        grid-auto-flow: column;
+        column-gap: 42px;
+        row-gap: 18px;
+        &-bl{
+          &-title{
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 28px;
+            letter-spacing: 0.02em;
+            color: #464646;
+          }
+          &-number{
+            font-weight: 600;
+            font-size: 22px;
+            line-height: 28px;
+            letter-spacing: 0.02em;
+            color: #464646;
+          }
+          &-descr{
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 28px;
+            letter-spacing: 0.02em;
+            color: #464646;
+
+          }
+        }
+      }
+    }
+  }
   &__title {
     position: relative;
     font-weight: 700;
