--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -36,8 +36,7 @@
       top: -99px;
       width: 100%;
       height: 771px;
-      background:url('../../img/superwoomen.png');
-      
+      background:url('../img/superwoomen.png');
     }
    
     &_card {
