--- a/src/sass/block/_titul.scss
+++ b/src/sass/block/_titul.scss
@@ -63,7 +63,7 @@
       top: -59px;
       width: 995px;
       height: 550px;
-      background:url('../../img/titul__img.svg');
+      background:url('../img/titul__img.svg');
     }
     span {
       color: #41B619;
