--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -65,6 +65,7 @@
         background: url('../img/list_2.png') center;
       }
       &_btn{
+        padding: 18px 24px;
         margin-top: 24px;
         width: 350px;
         height: 56px;
