--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -77,6 +77,7 @@
         line-height: 20px;
         text-align: center;
         color: #FFFFFF;
+        text-decoration: none;
         &:hover{
           background: #2D920A;
           transition: all 200ms ease;
@@ -142,6 +143,7 @@
         color: #41B619;
         border: 1px solid #41B619;
         border-radius: 20px;
+        text-decoration: none;
         &:hover{
           background: #41B619;
           color: #FFFFFF;
