--- a/src/sass/block/_titul.scss
+++ b/src/sass/block/_titul.scss
@@ -1,19 +1,20 @@
 .titul {
   position: relative;
   padding: 27px 0 150px 0;
-  &__img{
-    position: absolute;
-    top: -32px;
-    left: 45%;
-   
+
+  &__img {
+    img {
+      top: 0;
+    }
   }
+
   &__menu {
-    
     padding-bottom: 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #E4E8EA;
+
     &_number {
       text-decoration: none;
       font-weight: 700;
@@ -22,6 +23,7 @@
       text-transform: uppercase;
       color: #41B619;
     }
+
     &_links {
       &-order {
         margin: 0;
@@ -31,6 +33,7 @@
         justify-content: center;
         align-items: center;
         column-gap: 24px;
+
         a {
           text-decoration: none;
           font-weight: 400;
@@ -40,36 +43,46 @@
       }
     }
   }
-  &__title {
+
+}
+
+.content {
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    width: 995px;
+    height: 550px;
+    top: 43px;
+    right: -290px;
+    background: url('../../img/titul_img.png');
+  }
+  
+&__wrapper {
+  &_title {
     margin-top: 109px;
     max-width: 546px;
     font-weight: 600;
     font-size: 40px;
     line-height: 50px;
     color: #0B3246;
-   
+
   }
-  &__subtitle {
+
+  &_subtitle {
     margin-top: 16px;
     max-width: 600px;
     font-weight: 400;
     font-size: 18px;
     line-height: 30px;
     color: #7D7D7D;
-    &::after {
-      content: '';
-      position: absolute;
-      right: -25%;
-      top: -59px;
-      width: 995px;
-      height: 550px;
-      background:url('../img/titul__img.svg');
-    }
+
     span {
       color: #41B619;
     }
   }
-  &__btn {
+
+  &_btn {
     margin-top: 42px;
     width: 350px;
     height: 56px;
@@ -86,21 +99,25 @@
     text-align: center;
     color: #FFFFFF;
   }
-  &__terms {
+
+  &_terms {
     margin-top: 87px;
     display: flex;
-    align-items:center;
+    align-items: center;
     column-gap: 28px;
-    &_item {
+
+    &-item {
       display: flex;
       align-items: center;
       column-gap: 8px;
+
       &-descr {
         width: 100%;
         font-weight: 400;
         font-size: 12px;
         line-height: 16px;
         color: #7D7D7D;
+
         span {
           font-weight: 700;
           font-size: 16px;
@@ -111,5 +128,8 @@
     }
   }
 }
+
+}
+
 
 
