--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,17 @@
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 
+// html{
+//   overflow-x:hidden;
+// }
+
 * {
   font-family: 'Montserrat', sans-serif;
   padding: 0;
   margin: 0;
+}
+
+body{
+  overflow-x: hidden;
 }
 
 .container {
@@ -19,3 +27,4 @@
 @import 'block/gmo';
 @import 'block/foother';
 @import 'block/modal';
+@import 'block/test';
