--- a/src/sass/block/_cmc.scss
+++ b/src/sass/block/_cmc.scss
@@ -2,7 +2,7 @@
   padding-top: 145px;
   margin: 0 auto;
   min-height: 750px;
-  .wrapper {
+  .impl {
     padding: 44px 33px 44px 33px;
     display: flex;
     justify-content: center;
@@ -33,7 +33,6 @@
         letter-spacing: 0.02em;
         text-transform: uppercase;
         color: rgba(0, 0, 0, 0.3);
-       
       }
       &_item{
        
