--- a/src/sass/block/_gmo.scss
+++ b/src/sass/block/_gmo.scss
@@ -61,15 +61,15 @@
     &__rooms{
       display: flex;
       gap: 10px;
-      &_room{
-        margin-top: 12px;
-        text-align: center;
-        padding: 10px;
-        width: 48px;
-        height: 48px;
-        background: #F1F2F2;
-        border-radius: 8px;
-      }
+      // &_room{
+      //   margin-top: 12px;
+      //   text-align: center;
+      //   padding: 10px;
+      //   width: 48px;
+      //   height: 48px;
+      //   background: #F1F2F2;
+      //   border-radius: 8px;
+      // }
     }
     &__minmax{
       margin-top: 11px;
