--- a/src/sass/block/_modal.scss
+++ b/src/sass/block/_modal.scss
@@ -89,5 +89,45 @@
   }
 }
 
+// Настройка чекбоксов и радио на подборе кв
+
+.form_radio_btn {
+	display: inline-block;
+	margin-right: 10px;
+}
+.form_radio_btn input[type=radio] {
+	display: none;
+}
+.form_radio_btn label {
+  margin-top: 12px;
+  text-align: center;
+  padding: 10px;
+  width: 48px;
+  height: 48px;
+  background: #F1F2F2;
+  border-radius: 8px;
+  &:hover{
+    background-color: #E2F5DB;
+  }
+}
+
+/* Checked */
+.form_radio_btn input[type=radio]:checked + label {
+	background-color: #41B619;
+  color: #fff;
+}
+ 
+/* Hover */
+.form_radio_btn label:hover {
+	color: #666;
+}
+ 
+/* Disabled */
+.form_radio_btn input[type=radio]:disabled + label {
+	background: #efefef;
+	color: #666;
+}
+
+
 
 
