text-decaration button

--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -147,9 +147,9 @@
       text-align: center;
       color: #FFFFFF;
       text-decoration: none;
-
       &:hover {
         background: #2D920A;
+        color: #FFFFFF;
         transition: all 200ms ease;
       }
     }
