--- a/src/sass/block/_exam.scss
+++ b/src/sass/block/_exam.scss
@@ -50,6 +50,13 @@
       line-height: 20px;
       text-align: center;
       color: #FFFFFF;
+      cursor: pointer;
+      text-decoration: none;
+      &:hover {
+        background: #2D920A;
+        color: #FFFFFF;
+        transition: all 200ms ease;
+      }
     }
   }
 }
