--- a/src/sass/block/_cmc.scss
+++ b/src/sass/block/_cmc.scss
@@ -13,27 +13,20 @@
     &__fon {
       padding: 37px 60px;
       display: flex;
-      align-items: flex-end;
+      align-items: flex-start;
       column-gap: 30px;
       width: 100%;
       height: 662px;
       background-color: #ECFFE5;
       border-radius: 24px;
       &_gif {
-        padding: 258px 0 275px 0;
-        display: block;
-        text-align: center;
-        width: 587px;
-        max-height: 587px;
-        background: #FFFFFF;
-        border-radius: 24px;
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 54px;
-        letter-spacing: 0.02em;
-        text-transform: uppercase;
-        color: rgba(0, 0, 0, 0.3);
-        cursor: pointer;
+        width: 100%;
+        img{
+          width: 100%;
+          max-height: 587px;
+          border-radius: 24px;
+        }
+ 
         
       }
       &_item{
