--- a/src/sass/block/_titul.scss
+++ b/src/sass/block/_titul.scss
@@ -55,91 +55,89 @@
 
 .content {
   position: relative;
-  &::after {
-    content: '';
-    position: absolute;
-    width: 995px;
-    height: 550px;
-    top: 43px;
-    right: -290px;
-    background: url('../img/titul_img.png')no-repeat;
-  }
   
-&__wrapper {
-  &_title {
-    margin-top: 109px;
-    max-width: 546px;
-    font-weight: 600;
-    font-size: 40px;
-    line-height: 50px;
-    color: #0B3246;
-
+  &__img {
+    position: absolute;
+    right: 0;
+    top: 0;
+    right: -259px;
+    top: -47px;
   }
 
-  &_subtitle {
-    margin-top: 16px;
-    max-width: 600px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 30px;
-    color: #7D7D7D;
+  &__wrapper {
+    &_title {
+      margin-top: 109px;
+      max-width: 546px;
+      font-weight: 600;
+      font-size: 40px;
+      line-height: 50px;
+      color: #0B3246;
 
-    span {
-      color: #41B619;
     }
-  }
 
-  &_btn {
-    padding: 18px 24px;
-    margin-top: 42px;
-    width: 350px;
-    height: 56px;
-    border-radius: 20px;
-    background: #41B619;
-    border: none;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    color: #FFFFFF;
-    cursor: pointer;
-    text-decoration: none;
-    &:hover {
-      background: #2D920A;
+    &_subtitle {
+      margin-top: 16px;
+      max-width: 600px;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 30px;
+      color: #7D7D7D;
+
+      span {
+        color: #41B619;
+      }
+    }
+
+    &_btn {
+      padding: 18px 24px;
+      margin-top: 42px;
+      width: 350px;
+      height: 56px;
+      border-radius: 20px;
+      background: #41B619;
+      border: none;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: center;
       color: #FFFFFF;
-      transition: all 200ms ease;
+      cursor: pointer;
+      text-decoration: none;
+      &:hover {
+        background: #2D920A;
+        color: #FFFFFF;
+        transition: all 200ms ease;
+      }
     }
-  }
 
-  &_terms {
-    margin-top: 87px;
-    display: flex;
-    align-items: center;
-    column-gap: 28px;
-
-    &-item {
+    &_terms {
+      margin-top: 87px;
       display: flex;
       align-items: center;
-      column-gap: 8px;
+      column-gap: 28px;
 
-      &-descr {
-        width: 100%;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 16px;
-        color: #7D7D7D;
+      &-item {
+        display: flex;
+        align-items: center;
+        column-gap: 8px;
 
-        span {
-          font-weight: 700;
-          font-size: 16px;
-          line-height: 24px;
-          color: #41B619;
+        &-descr {
+          width: 100%;
+          font-weight: 400;
+          font-size: 12px;
+          line-height: 16px;
+          color: #7D7D7D;
+
+          span {
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 24px;
+            color: #41B619;
+          }
         }
       }
     }
   }
-}
-
 }
 
 
