--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -1,4 +1,6 @@
 .why{
+  position: relative;
+
   &__title{
     position: relative;
     font-weight: 700;
@@ -29,14 +31,10 @@
     grid-template-rows: repeat(2, minmax(232px, auto));
     column-gap: 28px;
     row-gap: 66px;
-    &::after {
-      content: '';
+    &_img{
       position: absolute;
-      right: -100%;
-      top: -99px;
-      width: 100%;
-      height: 771px;
-      background:url('../img/superwoomen.png');
+      transform: translateY(-53%);
+      right: -473px;
     }
    
     &_card {
