--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,18 +10,9 @@
   margin: 0;
 }
 
-html{
 
-  width: 100%;
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
-body
-{
-  width: 100%;
-  max-width: 100%;
-  overflow-x: hidden;
+body{
+  background-color: #fbfbfb;
 }
 
 .container {
